--- a/mobile/app.json
+++ b/mobile/app.json
@@ -17,31 +17,29 @@
     "assetBundlePatterns": ["**/*"],
 
     "android": {
+      "package": "com.financas.app",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#6C63FF"
       },
-      "package": "com.seunome.financasapp"
+      "googleServicesFile": "./google-services.json",
+      "permissions": [
+        "RECEIVE_BOOT_COMPLETED",
+        "VIBRATE",
+        "SCHEDULE_EXACT_ALARM"
+      ]
     },
 
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
       "bundleIdentifier": "com.financas.app",
       "buildNumber": "1",
       "infoPlist": {
         "UIBackgroundModes": ["remote-notification"]
       }
     },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#6C63FF"
-      },
-      "package": "com.financas.app",
-      "versionCode": 1,
-      "googleServicesFile": "./google-services.json",
-      "permissions": ["RECEIVE_BOOT_COMPLETED", "VIBRATE", "SCHEDULE_EXACT_ALARM"]
-    },
+
     "plugins": [
       "expo-router",
       "expo-secure-store",
@@ -53,6 +51,7 @@
         }
       ]
     ],
+
     "extra": {
       "eas": {
         "projectId": "your-project-id"
